engine/crates/sdl-parser/src/rules/snapshots/sdl_parser__rules__relations_engine__tests__one_to_many_relation_monodirectional_2.snap
---
source: common/parser/src/rules/relations_engine.rs
assertion_line: 190
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: OneToMany,
        relation: (
            "Author",
            "Post",
        ),
        birectional: false,
    },
}
