engine/crates/sdl-parser/src/rules/snapshots/sdl_parser__rules__relations_engine__tests__one_to_one_relation_bidirectionnal.snap
---
source: common/parser/src/rules/relations_engine.rs
assertion_line: 144
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: OneToOne,
        relation: (
            "Author",
            "Post",
        ),
        birectional: true,
    },
}
